feat: moderniza cálculo e adiciona niveladores de piso
