# backend-gestao-revestimento/src/main/java/br/com/redeasso/gestao/calculo/api/CalculoController.java
@@ -23,6 +23,7 @@ public class CalculoController {
                 request.pisoId(),
                 request.codigoPiso(),
                 request.metragemM2(),
+                request.quantidadeCaixas(),
                 request.margemQuebra());
     }
 }
