# backend-gestao-revestimento/src/main/java/br/com/redeasso/gestao/calculo/api/CalculoResponse.java
@@ -10,5 +10,14 @@ public record CalculoResponse(
         BigDecimal margemQuebra,
         BigDecimal metragemComMargem,
         long quantidadeCaixas,
+        BigDecimal metragemVendidaM2,
+        long quantidadeSacosArgamassa,
+        BigDecimal pesoArgamassaKg,
+        Long quantidadeEmbalagensRejunte,
+        BigDecimal pesoRejunteKg,
+        Long niveladoresLadoX,
+        Long niveladoresLadoY,
+        Long quantidadeNiveladores,
+        Long quantidadePacotesNiveladores,
         BigDecimal valorTotal) {
 }
